# polar-codes

./: .env  .gitignore  .hgignore  .zenodo.json  AlignedAllocator.h  ArrayFuncs.cpp  ArrayFuncs.h  CMakeLists.txt  DataPool.cpp  DataPool.h  Modem.cpp  Modem.h  Parameters.h  Polar Coding.dev  PolarCode.MultiPath.cpp  PolarCode.cpp  PolarCode.cpp.orig  PolarCode.h  PolarCode.pc.in  README.md  SpecialDecoder.cpp  SpecialDecoderParams.h  SpecialMultiPathDecoder.cpp  SpecialParameters.h  analyze_results.py  avx2_mathfun.h  avx_mathfun.h  channel_construction.py  channel_simulation.py  cmake_debug.sh  cmake_release.sh  crc.h  crc0.cpp  crc0.h  crc32.cpp  crc32.h  crc8.cpp  crc8.h  cython_install.sh  lcg.h  (+9 more)
.ci_support/: linux_64_python3.10.____cpython.yaml  linux_64_python3.11.____cpython.yaml  linux_64_python3.8.____cpython.yaml  linux_64_python3.9.____cpython.yaml
.conda/: README.md
.conda/recipe/: build.sh  meta.yaml
.github/workflows/: check-formatting.yml  conda-build.yml  run-test.yml
PCTree/: ArrayFuncs.cpp  ArrayFuncs.h  PCTree.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Specialized Decoder/: Specialized Decoder.dev  main.cpp
benchmark/: CMakeLists.txt  main_benchmark.cpp  test_functions.txx
cmake/: cmake_uninstall.cmake.in
cmake/Modules/: FindCppUnit.cmake  FindTCLAP.cmake  PolarCodeConfig.cmake  targetConfig.cmake.in
doc/: CMakeLists.txt  Doxyfile.in  doxyfile
include/: alignednew.h
include/polarcode/: CMakeLists.txt  arrayfuncs.h  avxconvenience.h  bitcontainer.h  datapool.txx  polarcode.h  puncturer.h
include/polarcode/construction/: CMakeLists.txt  betaexpansion.h  bhattacharrya.h  constructor.h  fiveGList.h
include/polarcode/decoding/: CMakeLists.txt  adaptive_char.h  adaptive_float.h  adaptive_mixed.h  avx2_char.h  avx2_templates.txx  avx_float.h  decoder.h  depth_first.h  errorlocator.h  fastssc_avx2_char.h  fastssc_avx_float.h  fastssc_fip_char.h  fastsscan_float.h  fip_char.h  fip_templates.txx  fixed_fip_char.h  scan.h  scl_avx2_char.h  scl_avx_float.h  scl_fip_char.h  templatized_float.h
include/polarcode/encoding/: CMakeLists.txt  butterfly_avx2.h  butterfly_avx2_char.h  butterfly_avx2_packed.h  butterfly_avx_float.h  butterfly_fip.h  butterfly_fip_packed.h  encoder.h  recursive_avx2_packed.h  recursive_fip_packed.h
include/polarcode/errordetection/: CMakeLists.txt  cmac.h  crc11nr.h  crc16.h  crc16nr.h  crc24nrc.h  crc32.h  crc6nr.h  crc8.h  dummy.h  errordetector.h
include/signalprocessing/: avx_mathfun.h  lcg.h  random.h
include/signalprocessing/modulation/: ask.h  bpsk.h  modem.h
include/signalprocessing/transmission/: awgn.h  rayleigh.h  scale.h  transmitter.h
pypolar/: .hgignore  polar_interface.pxd  pypolar.cpp  pypolar.pyx
python/: 5g_polar_code_reliability_table.csv  CMakeLists.txt  __init__.py  analyze_results.py  channel_construction.py  channel_simulation.py  frozen_bit_positions.py  latex_plot_magic.py  plot_polar_code_benchmark.py  plot_polar_code_tree.py  polar_5g_parameters.py  polar_code_plots.py  polar_code_tools.py  polar_test_code.py  qa_pypolar_decoder.py  qa_pypolar_detector.py  qa_pypolar_encoder.py  qa_pypolar_puncturer.py
python/bindings/: CMakeLists.txt  decoder_python.cc  detector_python.cc  encoder_python.cc  frozen_bits_python.cc  puncturer_python.cc  python_bindings.cc
src/: CMakeLists.txt
src/errorlocator/: CMakeLists.txt  main.cpp  setup.cpp  setup.h  simulator.cpp  simulator.h  statistics.cpp  statistics.h
src/polarcode/: CMakeLists.txt  arrayfuncs.cpp  avxconvenience.cpp  bitcontainer.cpp  polarcode.cpp  puncturer.cpp
src/polarcode/construction/: betaexpansion.cpp  bhattacharrya.cpp  constructor.cpp  fiveGList.cpp
src/polarcode/decoding/: adaptive_char.cpp  adaptive_float.cpp  adaptive_mixed.cpp  avx2_char.cpp  avx_float.cpp  decoder.cpp  depth_first.cpp  errorlocator.cpp  fastssc_avx2_char.cpp  fastssc_avx_float.cpp  fastssc_fip_char.cpp  fastsscan_float.cpp  fixed_avx2_char.cpp  fixed_fip_char.cpp  scan.cpp  scl_avx2_char.cpp  scl_avx_float.cpp  scl_fip_char.cpp
src/polarcode/decoding/decoderfactory/: main.cpp
src/polarcode/encoding/: butterfly_avx2.cpp  butterfly_avx2_char.cpp  butterfly_avx2_packed.cpp  butterfly_avx_float.cpp  butterfly_fip.cpp  butterfly_fip_packed.cpp  encoder.cpp  recursive_avx2_packed.cpp  recursive_fip_packed.cpp
src/polarcode/errordetection/: CRC.h  cmac.cpp  crc11nr.cpp  crc16.cpp  crc16nr.cpp  crc24nrc.cpp  crc32.cpp  crc6nr.cpp  crc8.cpp  dummy.cpp  errordetector.cpp
src/signalprocessing/: CMakeLists.txt  random.cpp
src/signalprocessing/modulation/: ask.cpp  bpsk.cpp  modem.cpp
src/signalprocessing/transmission/: awgn.cpp  rayleigh.cpp  scale.cpp  transmitter.cpp
src/simulation/: CMakeLists.txt  fixedfrozenbits.h  main.cpp  setup.cpp  setup.h  simulator.cpp  simulator.h  statistics.cpp  statistics.h
test/: CMakeLists.txt
test/polarcode/: CMakeLists.txt  bitcontainertest.cpp  bitcontainertest.h  constructiontest.cpp  constructiontest.h  decodingtest.cpp  decodingtest.h  encodingtest.cpp  encodingtest.h  errordetectiontest.cpp  errordetectiontest.h  polarcodetest.cpp  polarcodetest.h  puncturertest.cpp  puncturertest.h  siformat.cpp  siformat.h
test/signalprocessing/: CMakeLists.txt  mathtest.cpp  mathtest.h  modulationtest.cpp  modulationtest.h  transmissiontest.cpp  transmissiontest.h
test/tester/: CMakeLists.txt  tester.cpp
