# Copyright 2018 Florian Lotze
#
# This file is part of PolarCodes
#
# SPDX-License-Identifier: GPL-3.0-or-later
#

########################################################################
# Install public header files
########################################################################
install(FILES
    decoder.h DESTINATION include/polarcode/decoding
)
