
########################################################################
# Install public header files
########################################################################
install(FILES
    encoder.h
    butterfly_avx2_packed.h
    butterfly_avx2_char.h DESTINATION include/polarcode/encoding
)


