
########################################################################
# Install public header files
########################################################################
install(FILES
    errordetector.h
    crc8.h
    crc16.h
    crc32.h
    dummy.h DESTINATION include/polarcode/errordetection
)


